# ShaderPreviewer

./: CMakeLists.txt  README.md
shaders/: default.vert  postfx.frag  scene.frag
shaders/A/: scene.frag
shaders/shadertoys/: clouds1.frag  clouds2.frag  terrain.frag  tube1.frag  tube2.frag  water2.frag
src/: Input.cpp  Input.h  Logger.cpp  Logger.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  ShaderWatcher.cpp  ShaderWatcher.h  main.cpp
src/opengl/: Mesh.cpp  Mesh.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h
src/ui/: UI.cpp  UI.h  UIRender.cpp
src/utils/: Math.cpp  Math.h
